@@ -1,0 +1,1 @@
+languageClasses=org.languagetool.language.Demo
