@@ -17,6 +17,8 @@ LanguageTool Change Log
     -Almost all deprecated methods and classes have been removed. If you're upgrading 
      from a version earlier than 2.5, we recommend to upgrade to 2.5 first, fix all
      deprecation warnings, and then upgrade to 2.6.
+    -The public field Language.DEMO has been removed. It is now only available 
+     internally for tests, together with the demo language itself and DemoChunker.
     -JLanguageTool.printIfVerbose() has been changed from protected to private,
      as it was not used anywhere and it's not really useful to extend JLanguageTool
     -StringTools.isAlphabetic() has been removed as it was a workaround for Java 6
